--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hangul-check",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kentaroukoizumi.github.io/hangul-check",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
